--- a/toku-front/package.json
+++ b/toku-front/package.json
@@ -13,12 +13,13 @@
     "crypto-js": "^4.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-snaplist-carousel": "^4.6.0",
     "sort-by": "^1.2.0",
+    "video-react": "^0.16.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
