--- a/tokuzilla-app/package.json
+++ b/tokuzilla-app/package.json
@@ -24,8 +24,6 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
-    "fastify": "^4.27.0",
-    "fs": "^0.0.1-security",
-    "react-icons": "^5.2.1"
+    "fs": "^0.0.1-security"
   }
 }
